apps/medium-place/synapse/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: synapse-coturn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse-coturn
  template:
    metadata:
      labels:
        app: synapse-coturn
    spec:
      hostNetwork: true
      serviceAccountName: synapse
      containers:
        - name: synapse-coturn
          image: coturn/coturn:4.5.2
          ports:
            - name: turn-tcp
              protocol: TCP
              containerPort: 3478
              hostPort: 3478
            - name: turn-udp
              protocol: UDP
              containerPort: 3478
              hostPort: 3478
