apps/medium-place/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
spec:
  selector:
    app: synapse
  ports:
    - protocol: TCP
      port: 8008
      targetPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  name: synapse-coturn
spec:
  selector:
    app: synapse-coturn
  ports:
    - name: turn-tcp
      protocol: TCP
      port: 3478
      targetPort: 3478
    - protocol: UDP
      name: turn-udp
      port: 3478
      targetPort: 3478
